correcting avatar distorted

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -5,6 +5,5 @@
 
 .avatar.distorted {
     width: 200;
-    height: width*2;
-
+    height: 400;
 }
